# yablys

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  build.sh  get_wrapper.h  main.cpp  requirements.txt
include/: common.h  get_wrapper.h  return_codes.h  utils.h
include/wrappers/: abstract_wrapper.h  cbc_wrapper.h  copt_wrapper.h  highs_wrapper.h  scip_wrapper.h
py/: make_report.py  run_bench.py
wrappers/: abstract_wrapper.h  cbc_wrapper.h  copt_wrapper.h  highs_wrapper.h  reshala_wrapper.h  scip_wrapper.h
